--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -11,7 +11,7 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
+America=read_csv("GSScsv.csv")
 ```
 
 # Introduction
@@ -19,8 +19,8 @@ require(tigerstats)
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
 
 The data is in the file GSScsv.csv and came from the 2018 General Social Survey.  The question to answer is to resolve this hypothesis.  
-$H_0$ There is no difference between the average score on the WORDSUM test and level of schooling EDUC  
-$H_a$ There is a significant difference in average score on the WORDSUM test between at least two levels of EDUC  
+$H_0$ There is no difference between the average score on the WORDSUM test and level of schooling DEGREE 
+$H_a$ There is a significant difference in average score on the WORDSUM test between at least two levels of DEGREE  
 
 # Methods
 
@@ -36,15 +36,39 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+
+```{r}
+boxplot(WORDSUM~DEGREE,data=America)
+```
+
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+
+```{r}
+favstats(WORDSUM~DEGREE,data=America)
+```
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=America)
+summary.aov(model1)
+```
+
+## When significant follow up with TukeyHSD  
+
+```{r}
+plot(TukeyHSD(model1))
+```
 
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+
+In the AOV test, the p-value is .000236 < 0.05,we reject the null hypothesis.the score on WORDSUM test depends on the DEGREE level. There is a significant difference between the high school and graduate and the less than high school graduate. for all other comparisms, there is no difference
